# FAO_ag_check_code

./: .gitignore  0A.data_check_n_clean.ipynb  0B.csif_proxy_fxs.ipynb  0C.making_country_crop_keys.ipynb  1.run_usa.ipynb  2.run_world.ipynb  3A.plot_maps.ipynb  3B.plot_flags.ipynb  3C.plot_income.ipynb  5.creating_model_df.R  6.multilevel_bmm_model.R  7.model_plots.R  8.disagg_crops.R  README.md  S1.africa_lag_maps.R  S1.test_lag_significance.ipynb  S3. plot_variance.R  clim_variability_boxplots.ipynb  clim_variability_plots.ipynb  clim_vars_dt.ipynb  detrend.ipynb  pyproject.toml
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
data/: ag_vars.csv  calendar_fao_cropkey.pkl  corruption.csv  country_key.csv  fao_flag_pct.csv  faostat_all_flags.csv  fig4_adjr2.csv  iso_a3_missing.csv  modis_vars.csv  sm_tmax.csv  wb_classification.csv  wb_gdp_per_cap.csv  yield_comparison_df.csv  yields_sm_tmax_reg.csv
jupyter_nb_scripts/: 1B.usa_plots.ipynb  3A.plot_maps.ipynb
notebook/: 0A.data_check_n_clean.ipynb  0B.csif_proxy_fxs_update.ipynb  0C.making_country_crop_keys.ipynb  1B.usa_plots.ipynb  2.YC_model.ipynb  2.run_world_update.ipynb  3A.plot_maps.ipynb  3B.plot_flags_update.ipynb  4.modis_vars_model.ipynb  5.teaser_weather_analysis copy.ipynb  5.teaser_weather_analysis.ipynb  7.edits.ipynb  S1.test_lag_significance_update.ipynb  clim_variability_model.ipynb  clim_variability_plots.ipynb  fixing_yield_comparison.ipynb  test.ipynb  yield_comparison_model.ipynb
plots/: lag_sig_update.csv
src/pkg/: __init__.py  clean.py  metrics.py  viz.py
(+16 files in other folders)
