[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pkg"               
version = "0.1.0"
description = "My custom data analysis functions"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "geopandas", 
    "statsmodels" ]

[tool.setuptools]
package-dir = {"" = "src"}
